syntax = "proto3";

package domain.referral.v1;

import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

import "src/domain/referral/v1/commands.proto";
import "src/domain/referral/v1/events.proto";
import "src/domain/referral/v1/queries.proto";

// ENTITIES ====================================================================
message Referral {
  // Identifier of the referral
  string id = 1;
  // Name of the referral
  string name = 2;
  string user_id = 3;

  // Create at
  google.protobuf.Timestamp created_at = 4;
  // Update at
  google.protobuf.Timestamp updated_at = 5;

  google.protobuf.FieldMask field_mask = 6;
}

message Referrals {
  repeated Referral referrals = 1;
}
